Именование классов реализующих интерфейс [#505124]