@@ -1,6 +1,12 @@
 package ru.job4j.tracker;
 
-import java.util.Arrays;
+
+import ru.job4j.tracker.action.*;
+import ru.job4j.tracker.input.Input;
+import ru.job4j.tracker.input.Validate;
+import ru.job4j.tracker.output.Console;
+import ru.job4j.tracker.output.Output;
+
 import java.util.List;
 
 public class StartUI {
@@ -10,7 +16,7 @@ public class StartUI {
         this.out = out;
     }
 
-    public void init(Input input, Tracker tracker, List<UserAction> actions) {
+    public void init(Input input, Store tracker, List<UserAction> actions) {
         boolean run = true;
         while (run) {
             this.showMenu(actions);
@@ -32,18 +38,21 @@ public class StartUI {
     }
 
     public static void main(String[] args) {
-        Output output = new ConsoleOutput();
-        Input input = new ValidateInput(output, new ConsoleInput());
-        Tracker tracker = new Tracker();
-        List<UserAction> actions = Arrays.asList(
-                new CreateAction(output),
-                new ShowAction(output),
-                new EditAction(output),
-                new DeleteAction(output),
-                new FindIdAction(output),
-                new FindNameAction(output),
-                new ExitAction(output)
+        Output output = new Console();
+        Input input = new Validate(output, new ru.job4j.tracker.input.Console());
+        try (Store tracker = new SqlTracker()){
+        List<UserAction> actions = List.of(
+                new Create(output),
+                new Replace(output),
+                new FindAll(output),
+                new Delete(output),
+                new FindById(output),
+                new FindByName(output),
+                new Exit(output)
         );
         new StartUI(output).init(input, tracker, actions);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 }
